<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Jan eta Bizi</string>
    <string name="txt1_nombreusuario">Nombre</string>
    <string name="txt1_apellidousuario">Apellido</string>
    <string name="txt2_correo">Correo electrónico</string>
    <string name="txt2_correo2">Correo</string>
    <string name="txt3_contraseña">Contraseña</string>
    <string name="txt4_guardar">Guardar</string>
    <string name="txt5_eliminar">¿Eliminar cuenta?</string>
    <string name="title_activity_login">Inicio de sesión</string>
    <string name="promt_user_mail">Email   <font color='#FF0000'>*</font></string>
    <string name="prompt_user_Name">Nombre   <font color='#FF0000'>*</font></string>
    <string name="prompt_user_Surname">Apellido   <font color='#FF0000'>*</font></string>
    <string name="prompt_user_Description">Descripción</string>
    <string name="prompt_password">Contraseña   <font color='#FF0000'>*</font></string>
    <string name="prompt_password_verify">Repite la Contraseña   <font color='#FF0000'>*</font></string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_register">Registrarte</string>
    <string name="error_message_email">Ingrese el email</string>
    <string name="error_message_email_correct">Ingrese un email válido</string>
    <string name="error_invalid_user_id">Número de identificación inválido</string>
    <string name="error_message_name">Ingrese su nombre completo</string>
    <string name="error_message_password_empty">Ingrese la contraseña</string>
    <string name="error_message_password">La contraseña es incorrecta</string>
    <string name="success_message"> Registro completado correctamente</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="error_server">Error en el servidor</string>
    <string name="error_password_match">Las contraseñas no coinciden</string>
    <string name="error_valid_email_password">Email o contraseña incorrecta</string>
    <string name="error_email_exists">Este email ya existe</string>
    <string name="error_incorrect_user_id">Número de identificación no registrado</string>
    <string name="error_network">Conexión de red no disponible</string>
    <string name="error_invalid_password">Contraseña inválida</string>
    <string name="textbtnregister">Registrate aqui </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textbtnlogin">Logeate aqui </string>
    <string name="logo">Jan eta bizi</string>
    <string name="titulo">Crea tu cuenta</string>
    <string name="filtrobusquedacomida">Busca una categoría</string>
    <string name="vegano">VEGANO</string>
    <string name="km0">KM0</string>
    <string name="lactosa">SIN LACTOSA</string>
    <string name="deporte">DEPORTISTAS</string>
    <string name="celiaco">CELIACOS</string>
    <string name="huevo">SIN HUEVO</string>
    <string name="aceite">SIN ACEITE PALMA</string>
    <string name="carrito">Carrito</string>
    <string name="items">Mis productos:</string>
    <string name="euros">0€</string>
    <string name="gastos">Gastos de envío:</string>
    <string name="total">Total:</string>
    <string name="adress">Dirección</string>
    <string name="payment">Payment</string>
    <string name="finalizar_compra">Finalizar compra</string>
    <string name="iva">IVA</string>
    <string name="iva_value">21%</string>
    <string name="euro">€</string>
    <string name="envioGratis">Gratis</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="direccion">Dirección   <font color='#FF0000'>*</font></string>
    <string name="ciudad">Ciudad   <font color='#FF0000'>*</font></string>
    <string name="provincia">Provincia</string>
    <string name="telefono">Teléfono</string>
    <string name="cp">Cp   <font color='#FF0000'>*</font></string>
    <string name="cardnumber">Numero de la tarjeta    <font color='#FF0000'>*</font></string>
    <string name="caducidad">Caducidad    <font color='#FF0000'>*</font></string>
    <string name="ccv">Ccv   <font color='#FF0000'>*</font></string>
    <string name="placeorder">Realizar pedido</string>
    <string name="envio">Envio</string>
    <string name="subtotal">SubTotal</string>
    <string name="gracias">¡Muchas gracias!</string>
    <string name="graciastxt">Muchas gracias por comprar con nosotros, recibira el pedido en los proximos dias habiles, que tengas un buen dia </string>
    <string name="seguir">Seguir comprando</string>
    <string name="first_fragment_label">Hello first fragment</string>
    <string name="second_fragment_label">Hello second fragment. Arg: %1$s</string>
    <string name="btnUsuarios"> Usuarios</string>
    <string name="btnPedidos"> Pedidos</string>
    <string name="btnProductos"> Productos</string>
    <string name="carrito_vacio">Tu carrito está vacío</string>
    <string name="añadir_carrito">Añadir al carrito</string>
    <string name="añadir">Añadir al carrito</string>
    <string name="comprar">Comprar</string>
    <string name="totalpedidos">Pedidos</string>
    <string name="numeropedido">N pedido</string>
    <string name="usuario">Usuario</string>
    <string name="fecha">Fecha</string>
    <string name="estado">Estado</string>
    <string name="importe">Importe</string>
    <string name="gestion">Gestión</string>
    <string name="ciudadgestion" tools:ignore="MissingTranslation">Ciudad</string>
    <string name="cpgestion" tools:ignore="MissingTranslation">Cp</string>
    <string name="direcciongestion" tools:ignore="MissingTranslation">Direccion</string>
    <string name="tarjetagestion" tools:ignore="MissingTranslation">Tarjeta</string>
    <string name="descripciongestion" tools:ignore="MissingTranslation">Descripcion</string>
    <string name="tlfngestion" tools:ignore="MissingTranslation">Tlfn</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="zero">0</string>
    <string name="Idiomas">Idiomas</string>
    <string name="tema">Tema</string>
    <string name="logout">Cerrar sesión</string>
    <string name="temas">Temas</string>
    <string name="restablecer">Restablecer</string>
    <string name="euskera">Euskera</string>
    <string name="español">Español</string>
    <string name="ingles">Inglés</string>
    <string name="frances">Francés</string>
    <string name="light">Tema claro</string>
    <string name="dark">Tema oscuro</string>
    <string name="title_dialog">¿Desea eliminar la cuenta?</string>
    <string name="cancel">Cancelar</string>
    <string name="accept">Aceptar</string>
    <string name="pedidos">Pedidos y pagos</string>
    <string name="deleteaccount">Eliminar cuenta</string>
    <string name="pordefecto" tools:ignore="MissingTranslation">Por defecto</string>
    <string name="blogtitulo">Blog</string>
    <string name="tituloreceta01">Crema de lombarda y pera</string>
    <string name="descreceta01">Aunque este es un plato muy presente en los menús navideños, nada nos
        debería impedir incorporarlo a nuestras celebraciones en cualquier otro momento del año.
        Es un entrante elegante, vistoso y que tiene todas las de ganarse los estómagos de nuestros comensales. Porque está de-li-cio-sa.</string>
    <string name="fechareceta01">octubre 24, 2021</string>
    <string name="ingredientes">INGREDIENTES</string>
    <string name="ingredientes01">1/2 lombarda \n
    2 cebollas\n
    1 pera\n
    500 ml de caldo de verduras casero\n
    200 ml de leche o nata líquida\n
    3-4 cucharadas de aceite de oliva virgen extra\n
    Sal\n
    Uvas pasas\n
    Piñones\n
    Eneldo</string>
    <string name="preparacion">PREPARACIÓN</string>
    <string name="preparacion011">1.Retiramos el tronco duro de la lombarda y lo desechamos. Cortamos el resto en juliana gruesa con ayuda de un cuchillo bien afilado. Lavamos con abundante agua fría y escurrimos.\n

2.Pelamos las cebollas y las cortamos por la mitad. Después cortamos cada mitad en cuartos.\n

3.Pelamos la pera, cortamos a lo largo, retiramos las semillas y cortamos en cinco o seis trozos.\n

4.Calentamos el aceite en una olla rápida, como la WMF Perfect, echamos la cebolla y rehogamos un par de minutos. Incorporamos la lombarda y la pera y sofreímos un par de minutos más.\n</string>
    <string name="preparacion012"> 5.Agregamos el caldo y sazonamos al gusto (mejor quedarnos cortos y ajustar el punto al final de la cocción). Cerramos la tapa y calentamos a fuego alto. En el momento en que asome la válvula, solo la primera raya, bajamos el fuego a medio bajo y contamos ocho minutos.\n

6.Transcurrido el tiempo de cocción apagamos el fuego y dejamos que la olla se despresurice sola. Abrimos una vez ha salido todo el vapor y la válvula está escondida de nuevo.\n

7.Trituramos la crema con una batidora de brazo o con ayuda de un robot de cocina. Agregamos la nata líquida y batimos de nuevo. Probamos y ajustamos el punto de sabor sí lo consideramos necesario.\n

8.Servimos en soperas y llevamos a la mesa, decorando cada ración con uvas pasas, piñones y ramas de eneldo.</string>
    <string name="tituloreceta02">Mini Dutch Pancakes</string>
    <string name="descreceta02">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor erat at libero varius vulputate. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nam in neque ultrices, fermentum mi tristique, molestie nibh. Duis eu nisl ultrices, euismod felis ut, mollis ipsum. Vestibulum ac elit mi. Pellentesque suscipit leo tortor, eu sollicitudin orci condimentum eget. Morbi elit magna, accumsan et sagittis in, efficitur vitae dolor. Duis nec sagittis lacus. Nulla fringilla imperdiet pulvinar. </string>
    <string name="tituloreceta03">Gyozas vegetales (empanadillas chinas)</string>
    <string name="descreceta03">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor erat at libero varius vulputate. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nam in neque ultrices, fermentum mi tristique, molestie nibh. Duis eu nisl ultrices, euismod felis ut, mollis ipsum. Vestibulum ac elit mi. Pellentesque suscipit leo tortor, eu sollicitudin orci condimentum eget. Morbi elit magna, accumsan et sagittis in, efficitur vitae dolor. Duis nec sagittis lacus. Nulla fringilla imperdiet pulvinar. </string>
    <string name="filtrobusquedausuarios">Busqueda usuarios</string>
    <string name="todaslascuentas">Todos los usuarios</string>
    <string name="error_message_apellido">Ingrese su apellido</string>
    <string name="error_message_description">Ingrese al menos una descripción   <font color='#FF0000'>*</font></string>
    <string name="error_message_city">Ingrese una ciudad   <font color='#FF0000'>*</font></string>
    <string name="error_message_cp">Ingrese un código postal   <font color='#FF0000'>*</font></string>
    <string name="description">Introduzca una descripción</string>
    <string name="error_message_address">Ingrese una dirección</string>
    <string name="email">Email</string>
    <string name="contraseña">Contraseña</string>
    <string name="cardnumberinput">Número de la tarjeta</string>
    <string name="caducidad_title">Caducidad</string>
    <string name="error_message_numerotarjeta">Ingrese su número de tarjeta</string>
</resources>