<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/claro"
    tools:context=".activity_9_receta02">

    <TextView
        android:id="@+id/txtv_9_02topcolor"
        android:layout_width="fill_parent"
        android:layout_height="112dp"
        android:background="@color/mainGreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imgv_9_02atras"
        android:layout_width="34dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058"
        app:srcCompat="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/txtv_9_02titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blogtitulo"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <ScrollView
        android:id="@+id/sv_9_02scrollView"
        android:layout_width="wrap_content"
        android:layout_height="634dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.516">

        <LinearLayout
            android:id="@+id/linearLayout_9_02"
            android:layout_width="wrap_content"
            android:layout_height="550dp"
            android:layout_marginBottom="100dp"
            android:background="@color/claro"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.21">

            <TextView
                android:id="@+id/txtv_9_02nombrereceta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tituloreceta02"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/txtv_9_02fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_margin="@dimen/fab_margin"
                android:text="@string/fechareceta01"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txtv_9_02ingredientestitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredientes"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/txtv_9_02ingredientes"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_margin="@dimen/fab_margin"
                android:layout_marginBottom="50dp"
                android:paddingHorizontal="25dp"
                android:text="@string/ingredientes01" />

            <ImageView
                android:id="@+id/iv_9_02imagereceta"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:srcCompat="@drawable/receta021" />

            <TextView
                android:id="@+id/txtv_9_02preparaciontitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preparacion"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/txtv_9_02instrucciones"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_margin="@dimen/fab_margin"
                android:layout_marginBottom="50dp"
                android:paddingHorizontal="25dp"
                android:text="@string/preparacion011" />

            <ImageView
                android:id="@+id/iv_9_02imagereceta2"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:srcCompat="@drawable/receta022" />

            <TextView
                android:id="@+id/txtv_9_02instrucciones2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_margin="@dimen/fab_margin"
                android:layout_marginBottom="50dp"
                android:paddingHorizontal="25dp"
                android:text="@string/preparacion012" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavV_9_2bottomMenu"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="#FAEBE0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/navigation" />
</androidx.constraintlayout.widget.ConstraintLayout>